samples/_failures_safe/1761712762_6148c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b40b842.c:173: error: expected ‘;’, ‘,’ or ‘)’ at end of input
